# klirr-jing

./: .envrc  .gitignore  .pre-commit-config.yaml  .release.toml  .tarpaulin.toml  Cargo.toml  DEVELOPMENT.md  HOW_IT_WORKS.md  LICENSE.txt  README.md  SECURITY.md  _typos.toml  makefile
crates/cli/: Cargo.toml  README.md
crates/cli/src/: dispatch_command.rs  init_logging.rs  main.rs  run.rs
crates/cli/src/get_input/: get_localization.rs  input.rs  mod.rs  read_data_from_disk.rs  target_items.rs  valid_input.rs
crates/cli/src/input/: get_input.rs  mod.rs  target_items.rs  target_month.rs  target_period.rs  time_off_input.rs  time_off_unit_input.rs  tui.rs
crates/cli/src/input/get_input/: get_input.rs  mod.rs
crates/cli/src/input/get_input/data_admin_input/: data_admin_input.rs  mod.rs  period_off_input.rs
crates/cli/src/input/get_input/email_input/: edit_email_input.rs  email_input.rs  mod.rs
crates/cli/src/input/get_input/expenses_input/: expenses_input.rs  mod.rs
crates/cli/src/input/tui/: build_data.rs  build_email_settings.rs  mod.rs
crates/cli/src/input/tui/helpers/: build_company.rs  build_date.rs  build_email_account.rs  build_email_address.rs  build_email_template.rs  build_invoice_info.rs  build_password.rs  build_payment_info.rs  build_period.rs  build_postal_address.rs  build_service_fees.rs  build_smtp_server.rs  build_year_and_month.rs  mod.rs  select_or_default.rs
crates/cli/src/input/tui/inquire_extensions/: mod.rs  with_help_possible_values.rs  with_optional_default.rs
crates/core/: Cargo.toml
crates/core/layouts/: aioo.typ  test.typ
crates/core/src/: lib.rs
crates/core/src/fixtures/: expected_input_services.typ  expected_l18n_english.typ
crates/core/src/logic/: calendar_logic.rs  command.rs  create_pdf.rs  file_path_logic.rs  functional.rs  mod.rs  save_pdf_location_to_tmp_file.rs  send_email.rs  serde_to_typst.rs
crates/core/src/logic/command/: command.rs  data_selector.rs  email_settings_selector.rs  mod.rs  select.rs
crates/core/src/logic/encryption/: aes_gcm_256.rs  aes_gcm_sealed_box.rs  encrypted_app_password.rs  encryption_key.rs  mod.rs  pb_hkdf.rs  salt.rs
crates/core/src/logic/prepare_data/: fetch_exchange_rate_with_reqwest.rs  get_exchange_rates.rs  mod.rs  prepare_input_data.rs
crates/core/src/logic/read_write_data/: mod.rs  read_data_from_disk.rs
crates/core/src/logic/snapshots/: klirr_core__logic__serde_to_typst__tests__l18n_english_to_typst_macro.snap  klirr_core__logic__serde_to_typst__tests__sample_expenses_to_typst.snap  klirr_core__logic__serde_to_typst__tests__sample_services_to_typst.snap
crates/core/src/models/: cost.rs  date.rs  day.rs  decimal.rs  deserialize_contents_of_ron.rs  error.rs  exchange_rates.rs  f64_eq.rs  font_identifier.rs  font_weight.rs  invoice_info_full.rs  invoice_number.rs  invoiced_items.rs  item.rs  item_converted_into_target_currency.rs  layout.rs  mod.rs  month.rs  named_pdf.rs  output_path.rs  pdf.rs  quantity.rs  unit_price.rs  valid_input.rs  year.rs  year_and_month.rs
crates/core/src/models/data/: data.rs  data_from_disk_with_items_of_kind.rs  mod.rs
crates/core/src/models/data/submodels/: cadence.rs  company_information.rs  currency.rs  mod.rs  (+23 more)
crates/core/src/models/l18n/: client_info.rs  content.rs  invoice_info.rs  language.rs  line_items.rs  localization.rs  mod.rs  swedish.rs  vendor_info.rs
crates/core/src/models/line_items/: line_items_flat.rs  line_items_without_cost.rs  mod.rs
crates/core/src/models/snapshots/: klirr_core__models__decimal__tests__display.snap  klirr_core__models__decimal__tests__serde.snap  klirr_core__models__unit_price__tests__serde.snap
crates/logic/: Cargo.toml
crates/logic/src/: calendar_logic.rs  create_pdf.rs  error.rs  file_path_logic.rs  lib.rs  pdf.rs  prepare_input_data.rs  save_pdf_location_to_tmp_file.rs  serde_to_typst.rs
crates/logic/src/fixtures/: expected_input.typ  expected_input_expenses.typ  expected_input_services.typ  expected_l18n_english.typ
crates/logic/src/models/: company_information.rs  consulting_service.rs  cost.rs  currency.rs  date.rs  day.rs  deserialize_contents_of_ron.rs  error.rs  exchange_rates.rs  expensed_months.rs  hex_color.rs  invoice_identifier.rs  invoice_info_full.rs  invoice_information.rs  invoice_input_data.rs  invoice_number.rs  invoiced_items.rs  item.rs  item_converted_into_target_currency.rs  line_items.rs  mod.rs  month.rs  months_off_record.rs  output_path.rs  payment_information.rs  payment_terms.rs  postal_address.rs  proto_invoice_info.rs  purchase_order.rs  quantity.rs  service_fees.rs  street_address.rs  timestamped_invoice_number.rs  unit_price.rs  valid_input.rs  year.rs  year_and_month.rs
crates/logic/src/models/data/: data_from_disk.rs  data_from_disk_with_items_of_kind.rs  mod.rs
crates/logic/src/models/l18n/: client_info.rs  content.rs  invoice_info.rs  language.rs  line_items.rs  localization.rs  mod.rs  vendor_info.rs
crates/logic/src/models/line_items/: line_items_flat.rs  line_items_without_cost.rs
crates/logic/src/models/snapshots/: invoice_typst_logic__models__invoice_input_data__tests__serialization_sample.snap  invoice_typst_logic__models__invoice_input_data__tests__serialization_sample_consulting_services.snap  invoice_typst_logic__models__invoice_input_data__tests__serialization_sample_expenses.snap  invoice_typst_logic__models__invoice_input_data__tests__serialize.snap  invoice_typst_logic__models__payment_terms__tests__payment_terms_default.snap  invoice_typst_logic__models__payment_terms__tests__payment_terms_net_days.snap
crates/logic/src/prepare_data/: fetch_exchange_rate_with_reqwest.rs  get_exchange_rates.rs  mod.rs  prepare_input_data.rs
crates/logic/src/prepare_input_data/: get_exchange_rates.rs  prepare_input_data.rs
crates/logic/src/read_data/: get_localization.rs  read_data_from_disk.rs
crates/render/: Cargo.toml
crates/render/src/: input.typ  invoice.typ  lib.rs  mini.typ  minimal_world.rs  render.rs  render_test_helpers.rs
crates/render/src/typst_context/: content.rs  context.rs  environment.rs  mod.rs  source_extensions.rs
(+44 files in other folders)
