[workspace]
resolver = "3"
members = ["crates/cli", "crates/render", "crates/core"]

[workspace.dependencies]
# Internal dependencies
klirr-core = { path = "crates/core", version = "0.1.10" }
klirr-render = { path = "crates/render", version = "0.1.10" }

# External dependencies
chrono = "0.4.41"
derive_more = { version = "2.0.1", features = ["full"] }
dirs-next = "2.0.0"
getset = { version = "0.1.4", default-features = false, features = [] }
indexmap = { version = "2.9.0", features = ["serde"] }
insta = { version = "1.43.1", features = ["ron"] }
log = "0.4.27"
pretty_assertions = "1.4.1"
ron = "0.10.1"
rust_decimal = { version = "1.37.2", features = ["macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.114"
strum = { version = "0.27", features = ["derive"] }
tempfile = { version = "3.20.0" }
test-log = { version = "0.2.17" }
thiserror = "2.0.12"
typed-builder = "0.21.0"
