[package]
name = "klirr-core"
version = "0.1.5"
edition = "2024"
description = "Zero-maintenance and smart FOSS generating beautiful invoices for services and expenses."
license = "MIT"
documentation = "https://docs.rs/klirr-core"
repository = "https://github.com/Sajjon/klirr"

[dependencies]
# External dependencies
chrono.workspace = true
derive_more.workspace = true
dirs-next.workspace = true
getset.workspace = true
indexmap = { version = "2.9.0", features = ["serde"] }
indoc = "2.0.6"
lazy_static = "1.5.0"
log.workspace = true
reqwest = { version = "0.12.19", features = ["blocking", "json"] }
ron.workspace = true
serde_json.workspace = true
serde_with = "3.9"
serde.workspace = true
strum.workspace = true
thiserror.workspace = true
typed-builder.workspace = true

[dev-dependencies]
httpmock = "0.7.0"
insta.workspace = true
pretty_assertions.workspace = true
tempfile.workspace = true
test-log.workspace = true
ttf-parser = "0.25.1"
