[package]
name = "invoice-typst-logic"
version = "0.1.0"
edition = "2024"

[dependencies]
# Internal dependencies
# NONE

# External dependencies
thiserror.workspace = true
derive_more.workspace = true
log.workspace = true
typed-builder = "0.21.0"
getset = { version = "0.1.4", default-features = false, features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ron.workspace = true
serde_with = "3.9"

[dev-dependencies]
insta.workspace = true
pretty_assertions.workspace = true
