[package]
name = "invoice-typst-logic"
version = "0.1.0"
edition = "2024"

[dependencies]
# Internal dependencies
# NONE

# External dependencies
thiserror.workspace = true
derive_more.workspace = true
log.workspace = true
indoc = "2.0.6"
typed-builder.workspace = true
getset.workspace = true
serde_json.workspace = true
serde.workspace = true
ron.workspace = true
serde_with = "3.9"

[dev-dependencies]
insta.workspace = true
pretty_assertions.workspace = true
