[package]
name = "klirr-render"
version = "0.1.0"
edition = "2024"

[dependencies]
# Internal dependencies
klirr-core.workspace = true

# External dependencies
chrono.workspace = true
typst = "0.13.1"
typst-kit = "0.13.1"
typst-pdf = "0.13.1"
log.workspace = true
serde_json.workspace = true
typed-builder.workspace = true
getset.workspace = true
dirs-next.workspace = true

[dev-dependencies]
image-compare = "0.4.2"
image = { version = "0.25", default-features = false, features = ["png"] }
tempfile.workspace = true
test-log.workspace = true
