[package]
name = "klirr-render"
rust-version = "1.85.1"
version = "0.2.0"
edition = "2024"
description = "Zero-maintenance and smart FOSS generating beautiful invoices for services and expenses."
license = "MIT"
documentation = "https://docs.rs/klirr-render"
repository = "https://github.com/Sajjon/klirr"

[dependencies]
# Internal dependencies
klirr-core.workspace = true

# External dependencies
bon.workspace = true
chrono.workspace = true
derive_more.workspace = true
typst = "0.13.1"
typst-kit = "0.13.1"
typst-pdf = "0.13.1"
log.workspace = true
serde_json.workspace = true
getset.workspace = true
dirs-next.workspace = true

[dev-dependencies]
image-compare = "0.4.2"
image = { version = "0.25", default-features = false, features = ["png"] }
tempfile.workspace = true
test-log.workspace = true
